--- a/favoritos.html
+++ b/favoritos.html
@@ -27,8 +27,8 @@
 </header>
 
 
-    <h2 class="subtitulo">NUESTROS FAVORITOS:</h2>
-    <section class="cajapadre 1" >
+    <h2 class="subtitulo">FAVORITOS:</h2>
+    <section class="favoritos" >
         <article >
             <a href="./detalle-pelicula.html"> <img src="./img/4aa709fb827464c325ee3c63f07b8a6c.jpeg" alt=""> </a>
             <p class="nombrePeli">Titulo: Malefica</p>
