--- a/detalle-pelicula.html
+++ b/detalle-pelicula.html
@@ -9,6 +9,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;300;400&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/uikit@3.15.13/dist/css/uikit.min.css" />
+
     <title>Detalle pelicula</title>
 </head>
 
@@ -44,7 +46,7 @@
                       <p class="generoPelicula">Genero: </p>
                       <p class="duracion">Minutos: </p>
                       <p class="rating">Rating:</p>
-                      <p class="reviews" ></p>
+                      <p class="reviewsPelicula" ></p>
 
                   </article>
         </section>
@@ -66,6 +68,8 @@
 
     </footer> 
     <script type="text/javascript" src="./js/detalle-pelicula.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/uikit@3.15.13/dist/js/uikit.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/uikit@3.15.13/dist/js/uikit-icons.min.js"></script>
 </body>
 
 <!-- Footer -->
