--- a/detalle-serie.html
+++ b/detalle-serie.html
@@ -33,19 +33,16 @@
                 <article class="articlePoster">
                     <img src=" " alt="" class="poster">
                 </article>
-           <article class="article">
+                <article class="article">
                         <h1 class="tituloSeries"></h1>
                         <h2 class="fecha"> </h2>
                         <p class="descripcionSerie"> </p>
                         <p class="generoSerie"> </p>
                         <p class="duracion">Minutos: </p>
-                        <p class="rating">Rating:</p>
-                        
-
-                      </article>
-           <article class="series"> 
-                <p class="reviewseries">Rating:</p>
-        </article>         
+                        <p class="rating">Rating;</p>
+                        <p class="reviewsSerie" ></p>
+                </article>
+                    
             </section>
             <article class="articleIcono">
                 <img src="./img/amor.png" alt="" class="iconoCorazon">
