--- a/detalle-pelicula.html
+++ b/detalle-pelicula.html
@@ -46,6 +46,7 @@
                       <p class="generoPelicula">Genero: </p>
                       <p class="duracion">Minutos: </p>
                       <p class="rating">Rating:</p>
+                      <p class="plataformas" >Plataformas:</p>
                       <p class="reviewsPelicula" ></p>
 
                   </article>
